# SquareCloud-Manager-CLI

./: README.md  pyproject.toml
src/: main.py
src/funcs/: SetupManager.py  __init__.py
src/menus/: ConfigMenu.py  InitialMenu.py  InstallDependencies.py  PathMenu.py  __init__.py
src/utils/: __init__.py
